2009-01-28  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py (DoubleTLSClient.__child)
	* src/server.py (request_handling_child): Handle SystemError (raised
	on SIGTERM) without printing a backtrace.

2009-01-12  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Version 0.91.
	* NEWS: Update.

2009-01-11  Miloslav Trmač  <mitr@redhat.com>

	* src/utils.py (M2CryptoSHA512DigestMod): New class.
	* src/client.py (ClientsConnection.connect)
	(ClientsConnection.send_inner)
	* src/server.py (ServersConnection.read_request)
	(ServersConnection.read_request): Use M2Crypto.EVP.MessageDigest instead
	of hashlib, which is not supported by Python 2.4.
	* src/client.py (read_password): Read password from stdin, the second
	argument to getpass.getpass() is not supported by Python 2.4.
	* src/server.py (cmd_sign_rpm): Define '_signature gpg', which is
	required by RHEL5 rpm.

	* README: Make it clear when a CA private key is copied, describe how
	to avoid doing so.

	* src/client.py (main): Don't frighten users with exceptions on
	PR_END_OF_FILE_ERROR.